--- a/scott.org
+++ b/scott.org
@@ -1,7 +1,60 @@
+* TODO Do a general project review and prioritization.
+  DEADLINE: <2022-03-23 Wed>
+** Projects
+*** Team Allocation
+**** Alberto 
+**** Bruno 
+**** Daniel 
+**** James 
+**** Jeremy 
+**** Logan 
+**** Michael 
+**** Mirko 
+**** SamB 
+**** Shulhi 
+*** Backlog
+**** Better Alarm Creation Page
+**** Lufkin Sam Downhole driver 
+**** Universal writes proper typing
+**** OPC-UA driver Tag Browser 
+**** QR Code
+**** Sparkplug B Full implementation
+**** Data Only Linegraph Export
+**** Line Graph on Local HMI 
+**** HMI Resync Fix
+**** 7945 Tailscale                                                   :James:
+**** Water - Elynx Project 
+**** First Class Schedules
+**** [[https://www.openchargealliance.org/protocols/ocpp-201/][OCCP ]]Open charge point protocol     
+**** 8500 protocol                                                  :Preston:
+**** 230 [[https://github.com/plow-technologies/all/issues/230][Schedule Wheel]]
+**** 5810 [copilot-code-dater] Current implementation and future plans
+**** 6416 [proposal] mostly-serverless stakeout with WebRTC
+**** 6512 iwell api creation for onping driver
+**** 6840 Networked, in memory, and binary logging 
+**** 7934 RTU Manager Rewrite
+**** Probabilistic Inferno
+*** On Deck (Max
+**** Logan - 6207, 5730  OnPing Pricing
+     
+*** In Work
+**** [8297] 2FA                                                :Shulhi:Logan:
+**** [6188, 7648, 5474] Totalflow                                    :Jeremy:
+
+**** 7584 Pilot Water Site Pro :Michael:
+**** 4906 Finish LAS :Alberto:
+**** 4281 Finish LJ Deploy  :Alberto:
+**** 6244 Inferno :SamB:
+**** 7692 Tachdb Downhole Card Support :Daniel:
+**** Petro legacy appergy :Mirko:
+**** 7900 - Networks in OnPing  :LoganT:
+**** 1330 Bool support HMI :Shulhi:
+**** 8213 Ferguson CFX Driver :Preston:
+**** 7964 Flowcal CFX  :Bruno:    
 * TODO Loan Payment
-  DEADLINE: <2021-09-17 Fri>
-* TODO [[https://mail.google.com/mail/u/0/#search/lufkin/FMfcgxwJWjCrfGQsLKczWZZbpDXwJCQZ][Lufkin registers ]] ✓
-  DEADLINE: <2022-08-17 Wed>
+  DEADLINE: <2022-03-30 Wed>
+* TODO [[https://mail.google.com/mail/u/0/#search/lufkin/FMfcgxwJWjCrfGQsLKczWZZbpDXwJCQZ][Lufkin registers ]] ✓✓
+  DEADLINE: <2022-04-29 Fri>
 
 Well Status 	
 Time Elapsed in Well State (Hrs) 	
@@ -33,164 +86,138 @@ Surface Single Card Scaled Max Load
 Surface Single Card Scaled Minimum Load 	
 Surface Single Card Stroke Length 	
 Surface Single Card Stroke Period 	
-* TODO REview this https://github.com/plow-technologies/plc-identify/blob/master/Main.hs
-  DEADLINE: <2022-02-17 Thu>
-* TODO Test Pulse Card ✓
-  DEADLINE: <2021-10-26 Tue>
-+ Test power on
-+ Test Programming
-* TODO Create new driver features
-  DEADLINE: <2021-09-12 Sun>
+* TODO Create new driver features ✓✓
+  DEADLINE: <2022-04-15 Fri>
 ** Enable and Disable polling
 ** Sites go inactive insted of disappearing.
 ** Event Based Polling
-* TODO [[https://docs.google.com/spreadsheets/d/1Ap3AYmhPgWfQns_sHc8nhZ64hrD6FG7Hybf5qD0DmGY/edit#gid=0][Find people myself with a Telemetry committment.]] ✓
-  DEADLINE: <2021-09-22 Wed>
-** EV Stations
-** Refridgeration Car 
-
-* TODO ICSCADA, Ryan Steifes, last contact Jan 2020
-  DEADLINE: <2021-08-22 Sun>
+** Localized Polling (No rtu-manager send)
 * TODO Continental Resources, Lori Dankenbring, last contact Feb 2020
-  DEADLINE: <2021-10-26 Tue>
+  DEADLINE: <2022-04-27 Wed>
 * TODO Secretary of State
-  DEADLINE: <2021-12-22 Wed>
+  DEADLINE: <2022-12-28 Wed>
 * TODO Fix Emissary accounting exports
-  DEADLINE: <2021-11-12 Fri>
-* TODO [[https://mail.google.com/mail/u/0/#inbox/FMfcgxwKjBRFHBjHQPvtWWmRdsRcrJnC][Code Dater Comms Protocol]]
-  DEADLINE: <2022-02-23 Wed>
-* TODO [[https://mail.google.com/mail/u/0/#inbox/KtbxLthlxbRFWHmMMSpMXcDkDfTxndGmxB][Matt Brodine Power reset thing]]
-  DEADLINE: <2021-10-23 Sat>
+  DEADLINE: <2022-11-18 Fri>
+* TODO [[https://mail.google.com/mail/u/0/#inbox/FMfcgxwKjBRFHBjHQPvtWWmRdsRcrJnC][Code Dater Comms Protocol]] ✓
+  DEADLINE: <2023-03-04 Sat>
+
 * TODO [[https://emissary.plowtech.net/login#/ticket_doc_view/7802][Matt Brodine Missouri stuff]]
 * TODO [[https://github.com/plow-technologies/all/wiki/Glossary-of-terms-used-in-OnPing-and-Plow-Technologies][Define a Term ]]
-  DEADLINE: <2021-08-22 Sun>
-* TODO [[https://github.com/plow-technologies/all/issues/4015][RTU Client Lockup]] 
-  DEADLINE: <2021-08-22 Sun>
+  DEADLINE: <2022-03-22 Tue>
 * TODO [[https://github.com/plow-technologies/all/issues/5627][Too many deploys rolls 9999 over to 10000]]
-* TODO [[https://github.com/plow-technologies/all/issues/5880][Have someone do a walkthrough of logging in]] ✓✓
-  DEADLINE: <2021-09-23 Thu>
+* TODO [[https://github.com/plow-technologies/all/issues/5880][Have someone do a walkthrough of logging in]] ✓✓✓✓✓✓
+  DEADLINE: <2022-05-22 Sun>
 
-* TODO [[https://mail.google.com/mail/u/0/#inbox/FMfcgxwLsmgDrhhPXbzjPvBHwKmKHVSH][Careus]]
-  DEADLINE: <2021-08-26 Thu>
-Need to do plunger Demo thing.
-They would probably be interested in the latest plunger stuff
-* TODO Problems with Approvable balances
-  DEADLINE: <2021-10-22 Fri>
-* TODO [[https://lucid.app/lucidchart/invitations/accept/inv_e9945c3b-6fd9-4d62-abeb-6d6d96d6b32f?viewport_loc=-186%2C752%2C2903%2C1700%2C0_0][Finish Mass Writes widget]]
-  DEADLINE: <2021-10-22 Fri>
-* TODO [[file:~/notes/professional-journal/year-2021/year-2021.org][Journal Entry]] 
-  DEADLINE: <2021-08-11 Wed>
-* TODO reconcile accounts from Colton and QB
-  DEADLINE: <2021-09-03 Fri>
-+ Figure out why expense amounts in QB and in Colton are different
+* TODO [[file:~/notes/professional-journal/year-2022/year-2022.org][Journal Entry]] 
+  DEADLINE: <2022-03-30 Wed>
 * TODO [[https://mail.google.com/mail/u/0/#inbox/QgrcJHrnrmgGXTfPKxdZhmbmKfdKZCWXlPb][Matt Brodine, Driftwood Deploy]]
-* TODO Follow up with Joe Cyprus on what Oliver found ✓
-  DEADLINE: <2021-08-30 Mon>
-* TODO Talk with Alberto about dropping vpn need on LJD 
-  DEADLINE: <2022-05-10 Tue>
-* TODO [[https://mail.google.com/mail/u/0/#search/Seth.Kleman%40ce2ok.com/FMfcgzGkXSbPmZDtmKnplMqfXTrDlLzj][Read MQTT WOnderware notes]] 
-  DEADLINE: <2021-09-06 Mon>
-* TODO Build Electro Sensors package and demo ✓✓
-  DEADLINE: <2021-09-06 Mon>
-* TODO [[/home/scott/notes/books/advanced-probability/notes.org][Work on Probability Notes]]  
-  DEADLINE: <2021-08-29 Sun>
-* TODO Look over quickbooks AR/AP
-  DEADLINE: <2021-09-26 Sun>
-* TODO IAOM White Paper Submissions ✓✓
-  DEADLINE: <2021-08-30 Mon>
-+ Possible Paper Idea: Flexible Software for on the fly analysis?
-* TODO [[~/sales-and-marketing/marketing-content/content-cards/.][Content for Cards for Trade Shows]] 
-  DEADLINE: <2021-09-01 Wed>
-** DONE Plow Oil and Gas (Scott)-
-** DONE OnPing Oil and Gas (Scott)
-** DONE OnPing SWD  (Scott)
-** TODO OnPing Midstream (Scott)
-* DONE Demo Dashboards for Milling 
-  DEADLINE: <2021-08-11 Wed>
-* TODO Say something nice to Brooke 
-  DEADLINE: <2021-08-30 Mon>
-* TODO [[file:~/Documents/personal/ellie-projects.org][Find a fun science thing for Ellie]] ✓
-  DEADLINE: <2021-08-30 Mon>
-
-* TODO Start on a new spot report spec ✓✓✓✓
-  DEADLINE: <2021-09-03 Fri>
-* TODO Change Pricing Spec to use Custom Tables ✓✓
-  DEADLINE: <2021-08-24 Tue>
-* TODO Follow up on Email about Compass Radio Project✓
-  DEADLINE: <2021-08-24 Tue>
-* DONE Check on widget lord
-  DEADLINE: <2021-08-24 Tue>
-
+* TODO [[/home/scott/notes/books/advanced-probability/notes.org][Work on Probability Notes]]  ✓
+  DEADLINE: <2022-03-30 Wed>
+* TODO Look over quickbooks AR/AP 
+  DEADLINE: <2022-04-05 Tue>
+* TODO Look over quickbooks Balance Sheet.
+  DEADLINE: <2022-04-05 Tue>
+* TODO Look over quickbooks P&L
+  DEADLINE: <2022-04-05 Tue>
+* TODO Change Pricing Spec to use Custom Tables 
+  DEADLINE: <2022-03-23 Wed>
 * TODO Look over OnPing pricing one more time.
   DEADLINE: ho<2021-08-02 Mon>
-* TODO Check on Documentation website
-  DEADLINE: <2021-09-02 Thu>
-* TODO Time Travel Blog Post ✓
-  DEADLINE: <2021-08-31 Tue>
-* DONE [[https://mail.google.com/mail/u/0/#inbox/FMfcgzGkZkNBgTbvqRxzVFNprQTTWKMM][Drawings for Brian and Drive enclosure ]]
-  DEADLINE: <2021-08-18 Wed>
-* TODO Fix up cost estimator
-  DEADLINE: <2021-08-30 Mon>
-* TODO Prepare Custom Table as Cost Center ✓✓
-  DEADLINE: <2021-08-24 Tue>
-* TODO Review projects again 
-  DEADLINE: <2021-09-12 Sun>
-* TODO Follow up on leads
-  DEADLINE: <2021-09-03 Fri>
-* DONE [[https://mail.google.com/mail/u/0/#inbox/FMfcgzGkZkPLBhDsJWzkQvNcsngkvTTn][Check on Deep Sea]]
-  DEADLINE: <2021-08-16 Mon>
-* DONE Strata meeting
-  DEADLINE: <2021-08-24 Tue>
+* TODO Get Fred his tag counts
+* TODO Work on blog post about sensor quality scores ✓✓✓✓
+  DEADLINE: <2022-04-04 Mon>
+* TODO [[https://headwayapp.co/][Investigate Headway more carefully]]
+  DEADLINE: <2022-04-21 Thu>
 
-* DONE CFX Files on the Bella
-  DEADLINE: <2021-08-10 Tue>
-* DONE Follow up with Nick on iWell ✓
-  DEADLINE: <2021-08-13 Fri>
-* TODO Follow up with Nick on Radars
-  DEADLINE: <2021-08-24 Tue>
-* DONE Follow up on reports that went out
-  DEADLINE: <2021-08-10 Tue>
-* TODO Follow up about column reorder report feature
-  DEADLINE: <2021-08-18 Wed>
-* TODO [[https://www.analog.com/media/en/technical-documentation/application-notes/EE-269.pdf][Keep working on Ethernet Guide]]
-  DEADLINE: <2021-08-30 Mon>
-* TODO Follow up on Redwolf setups and Hardware
-  DEADLINE: <2021-08-26 Thu>
-* TODO Follow up on Ratler NDA
-  DEADLINE: <2021-09-02 Thu>
-* DONE Write Terms for Steven Jacob
-  DEADLINE: <2021-08-10 Tue>
-* DONE 72144504163046 expedia
-  DEADLINE: <2021-08-10 Tue>
-* DONE Start getting things ready for migration at camino
-  DEADLINE: <2021-08-11 Wed>
-* DONE Brent notes on topics.
-  DEADLINE: <2021-08-16 Mon>
-+ Are journalctl notes enabled or disabled?
-+ Can you give more of an explainer on the two versions of port forwarding?
-+ How to properly restore an accidentally deleted location 
-+ Kernel updates to lumberjacks 
-+ Hardware watchdogs for lumberjacks
-* DONE upload CFX stuff
-  DEADLINE: <2021-08-17 Tue>
-* TODO Get DFlex stuff looked at
-  DEADLINE: <2021-08-26 Thu>
-* Work on Circuit Board
-  DEADLINE: <2021-08-30 Mon>
-* TODO [#B] Crystal Calibration
-  DEADLINE: <2021-08-25 Wed>
-* DONE [[https://github.com/plow-technologies/all/issues/6816#issuecomment-900452345][Review the  hazard pro spec]]
-  DEADLINE: <2021-08-17 Tue>
-* TODO Total Flow Server Migration Layer
-  DEADLINE: <2021-08-20 Fri>
-* TODO Motor Vehicle Reports
-  DEADLINE: <2021-08-26 Thu>
-* TODO Need to get Grasshopper
-  DEADLINE: <2021-08-22 Sun>
-* TODO [[https://mail.google.com/mail/u/0/#inbox/FMfcgzGkZtCjcwLvhcQNTqmTMCMMszML][Judah Milling]]
-  DEADLINE: <2021-08-28 Sat>
-* DONE Shelf Energy
-  DEADLINE: <2021-08-23 Mon>
-* TODO [[https://ryanglscott.github.io/2021/08/22/leibniz-equality-in-haskell-part-1/][Read this Equalit thing]]
-  DEADLINE: <2021-08-26 Thu>
+Headway is the software Shulhi recommended for 
+updating customers about changes in OnPing.
+
+* TODO Write a spec for high speed driver ✓✓✓✓
+  DEADLINE: <2022-04-04 Mon>
+* TODO [[https://mail.google.com/mail/u/1/#search/Garrett.king%40plowtech.net/FMfcgzGlkjWzCsBmQZGNPGnmtCxcSMhW][Blackfire stakeout]]
+* TODO Process Jesse, OK Water notes 
+  DEADLINE: <2022-04-05 Tue>
+
+  
+Brief news letter on releases to Systems Integrator partners (Jesse believes it to be appropriate to send out integrator news letters that apply to OnPing 
+application development, additions to development tool features, etc. A news letter that directly applies to OnPing integrators)
+
+Adding to this, he wants a nice way of adding ISO symbols.
+* TODO Take a look at save and overwrite prompt on VP/CP (Jesse is worried that he will overwrite an existing script)
+
+* TODO HMI improvements on Indicator and HMI object sizing (The indicator object doesn't have a height configuration, only width)
+
+* TODO Engineering units on the side of Indicators (Jesse would like an engineering unit row on the HMI object configuration window on objects that it applies to)
+
+* TODO Sorting functions for parameter browsing (Jesse would like sorting for parameters on parameter browsing windows)
+
+* TODO Spec for first class schedules in OnPing ✓✓✓✓✓
+  DEADLINE: <2022-03-30 Wed>
+* TODO Review issues in OnPing 
+  DEADLINE: <2022-03-23 Wed>
+* TODO Reconcile Bank stuff as well 
+  DEADLINE: <2022-03-30 Wed>
+* TODO Get appliations for new credit card ✓✓✓✓✓
+  DEADLINE: <2022-04-09 Sat>
+* TODO Look at Sales Passthrough for numbers to pay Lynn Boyer and those guys ✓
+  DEADLINE: <2023-03-15 Wed>
+* TODO Say something nice to Brooke 
+  DEADLINE: <2022-03-30 Wed>
+* TODO Go through Emails 
+  DEADLINE: <2022-03-22 Tue>
+
+* TODO Go through hubspot
+  DEADLINE: <2022-04-05 Tue>
+
+* TODO EOS status of payment for Magna Power.
+  DEADLINE: <2022-03-30 Wed>
+* TODO Checking account needs to be emptied in Quickbooks
+  DEADLINE: <2022-03-30 Wed>
+* DONE Plow OK Income account needs to be fixed in Quickbooks OK 
+  DEADLINE: <2022-03-21 Mon>
+* TODO Start spec and cost estimate for pearlsnap kiosk project. 
+  DEADLINE: <2022-04-09 Sat>
+* TODO Review new metrics for tach with binary thing 
+  DEADLINE: <2022-04-29 Fri>
+* TODO Check on Tyson Status
+  DEADLINE: <2022-04-04 Mon>
+* DONE Add Scout bill to Seminole
+  DEADLINE: <2022-03-11 Fri>
+
+
+* TODO LACT Ticketing 
+  DEADLINE: <2022-04-29 Fri>
+* DONE What is the "withdrawals" account
+  DEADLINE: <2022-03-21 Mon>
+* TODO Insurance on Truck missed in feb
+  DEADLINE: <2022-03-21 Mon>
+* TODO I need to understand the ATT Bill again
+  DEADLINE: <2022-03-21 Mon>
+* DONE Look over Tobi's insurance
+  DEADLINE: <2022-03-16 Wed>
+* DONE Send over Eric (OK fidelity) Balance Sheet
+  DEADLINE: <2022-03-16 Wed>
+
+* DONE Look over Siddarth
+  DEADLINE: <2022-03-16 Wed>
+* TODO Foundation Energy Cell
+  DEADLINE: <2022-03-30 Wed>
+* DONE Camino report 
+  DEADLINE: <2022-03-18 Fri>
+* DONE Add Black label issue
+  DEADLINE: <2022-03-23 Wed>
+* TODO Review Dex Issue
+  DEADLINE: <2022-03-23 Wed>
+* TODO Review MQTT issue
+  DEADLINE: <2022-03-23 Wed>
+* DONE Get Sidharth info 
+  DEADLINE: <2022-03-23 Wed>
+* TODO Make Testing Discussion issue
+  DEADLINE: <2022-03-29 Tue>
+* TODO Respond to Blake email
+  DEADLINE: <2022-03-29 Tue>
+* TODO Check on Reconciliation 
+  DEADLINE: <2022-03-29 Tue>
+* TODO Jesse API stuff
+  DEADLINE: <2022-03-29 Tue>
 
