--- a/scott.org
+++ b/scott.org
@@ -1,5 +1,5 @@
 * TODO Do a general project review and prioritization.
-  DEADLINE: <2022-03-23 Wed>
+  DEADLINE: <2022-07-06 Wed>
 ** Projects
 *** Team Allocation
 **** Alberto 
@@ -57,49 +57,12 @@
 **** 1330 Bool support HMI :Shulhi:
 **** 8213 Ferguson CFX Driver :Preston:
 **** 7964 Flowcal CFX  :Bruno:    
-* TODO Loan Payment
-  DEADLINE: <2022-03-30 Wed>
-* TODO [[https://mail.google.com/mail/u/0/#search/lufkin/FMfcgxwJWjCrfGQsLKczWZZbpDXwJCQZ][Lufkin registers ]] ✓✓
-  DEADLINE: <2022-04-29 Fri>
 
-Well Status 	
-Time Elapsed in Well State (Hrs) 	
-Time Elapsed in Well State (Min) 	
-Time Elapsed in Well State (Sec) 	
-Runtime Today, Hrs 	
-Runtime Today, Min 	
-Runtime Yesterday, Hrs 	
-Runtime Yesterday, Min 	
-Cycles Today 	
-Cycles Yesterday 	
-Present (Current) Load, Lbs 	
-Peak Load Today, Lbs 	
-Min Load Today, Lbs 	
-Current Pump Fillage, % 	
-Present (Current) Position, IN 	
-Pump Sim Mode: Fillage Set point 	
-Pump Sim Mode: Off Time Duration (Hrs) 	
-Pump Sim Mode: Off Time Duration (Min) 	
-Load Stored 	
-Load Shutdown 	
-Load Malfunction 	
-Load Start 	
-Load Pump Up 	
-Load Last Stroke 	
-Surface Single Card Time Stamp 	
-Surface Single Card Point Count And Well State 	
-Surface Single Card Scaled Max Load 	
-Surface Single Card Scaled Minimum Load 	
-Surface Single Card Stroke Length 	
-Surface Single Card Stroke Period 	
-* TODO Create new driver features ✓✓
-  DEADLINE: <2022-04-15 Fri>
+
 ** Enable and Disable polling
 ** Sites go inactive insted of disappearing.
 ** Event Based Polling
 ** Localized Polling (No rtu-manager send)
-* TODO Continental Resources, Lori Dankenbring, last contact Feb 2020
-  DEADLINE: <2022-04-27 Wed>
 * TODO Secretary of State
   DEADLINE: <2022-12-28 Wed>
 * TODO Fix Emissary accounting exports
@@ -108,64 +71,33 @@ Surface Single Card Stroke Period
   DEADLINE: <2023-03-04 Sat>
 
 * TODO [[https://emissary.plowtech.net/login#/ticket_doc_view/7802][Matt Brodine Missouri stuff]]
-* TODO [[https://github.com/plow-technologies/all/wiki/Glossary-of-terms-used-in-OnPing-and-Plow-Technologies][Define a Term ]] 
-  DEADLINE: <2022-06-21 Tue>
+
 * TODO [[https://github.com/plow-technologies/all/issues/5627][Too many deploys rolls 9999 over to 10000]]
-* DONE [[https://github.com/plow-technologies/all/issues/5880][Have someone do a walkthrough of logging in]] ✓✓✓✓✓✓
-  DEADLINE: <2022-06-12 Sun>
-
-* [[file:~/notes/professional-journal/year-2022/year-2022.org][Journal Entry]]  ✓
-  DEADLINE: <2022-06-15 Wed>
 * TODO [[https://mail.google.com/mail/u/0/#inbox/QgrcJHrnrmgGXTfPKxdZhmbmKfdKZCWXlPb][Matt Brodine, Driftwood Deploy]]
-* TODO [[/home/scott/notes/books/advanced-probability/notes.org][Work on Probability Notes]]  ✓✓
-  DEADLINE: <2022-06-21 Tue>
-* Look over quickbooks AR/AP 
-  DEADLINE: <2022-06-15 Wed>
-* TODO Look over quickbooks Balance Sheet.
-  DEADLINE: <2022-06-15 Wed>
-* TODO Look over quickbooks P&L
-  DEADLINE: <2022-06-15 Wed>
-
+* TODO [[~/notes/books/advanced-probability/notes.org][Work on Probability Notes]] ✓✓✓✓
+  DEADLINE: <2022-06-30 Thu>
 * TODO [[file:~/notes/professional-journal/year-2022/year-2022.org][Journal Entry]] 
-  DEADLINE: <2022-03-30 Wed>
+  DEADLINE: <2022-06-30 Thu>
 * TODO [[https://mail.google.com/mail/u/0/#inbox/QgrcJHrnrmgGXTfPKxdZhmbmKfdKZCWXlPb][Matt Brodine, Driftwood Deploy]]
 * TODO [[/home/scott/notes/books/advanced-probability/notes.org][Work on Probability Notes]]  ✓
-  DEADLINE: <2022-03-30 Wed>
-* TODO Look over quickbooks AR/AP 
-  DEADLINE: <2022-04-05 Tue>
-* TODO Look over quickbooks Balance Sheet.
-  DEADLINE: <2022-04-05 Tue>
-* TODO Look over quickbooks P&L
-  DEADLINE: <2022-04-05 Tue>
-* TODO Change Pricing Spec to use Custom Tables 
-  DEADLINE: <2022-03-23 Wed>
+  DEADLINE: <2022-06-30 Thu>
+
 * TODO Look over OnPing pricing one more time.
   DEADLINE: ho<2021-08-02 Mon>
 * TODO Get Fred his tag counts
-* TODO Work on blog post about sensor quality scores ✓✓✓✓
-  DEADLINE: <2022-04-04 Mon>
+* TODO Work on blog post about sensor quality scores ✓✓✓✓✓✓
+  DEADLINE: <2022-07-29 Fri>
 * TODO [[https://headwayapp.co/][Investigate Headway more carefully]]
-  DEADLINE: <2022-04-21 Thu>
+  DEADLINE: <2022-06-30 Thu>
 
 Headway is the software Shulhi recommended for 
 updating customers about changes in OnPing.
 
-* TODO Write a spec for high speed driver ✓✓✓✓
-  DEADLINE: <2022-04-04 Mon>
 * TODO [[https://mail.google.com/mail/u/1/#search/Garrett.king%40plowtech.net/FMfcgzGlkjWzCsBmQZGNPGnmtCxcSMhW][Blackfire stakeout]]
-* TODO Process Jesse, OK Water notes 
-  DEADLINE: <2022-04-05 Tue>
+
 * TODO Write a spec for high speed driver ✓✓✓✓✓✓✓✓
   DEADLINE: <2022-07-14 Thu>
 * TODO [[https://mail.google.com/mail/u/1/#search/Garrett.king%40plowtech.net/FMfcgzGlkjWzCsBmQZGNPGnmtCxcSMhW][Blackfire stakeout]]
-* DONE Process Jesse, OK Water notes 
-  DEADLINE: <2022-06-12 Sun>
-
-  
-Brief news letter on releases to Systems Integrator partners (Jesse believes it to be appropriate to send out integrator news letters that apply to OnPing 
-application development, additions to development tool features, etc. A news letter that directly applies to OnPing integrators)
-
-Adding to this, he wants a nice way of adding ISO symbols.
 * TODO Take a look at save and overwrite prompt on VP/CP (Jesse is worried that he will overwrite an existing script)
 
 * TODO HMI improvements on Indicator and HMI object sizing (The indicator object doesn't have a height configuration, only width)
@@ -175,159 +107,109 @@ Adding to this, he wants a nice way of adding ISO symbols.
 * TODO Sorting functions for parameter browsing (Jesse would like sorting for parameters on parameter browsing windows)
 
 * TODO Spec for first class schedules in OnPing ✓✓✓✓✓
-  DEADLINE: <2022-03-30 Wed>
-* TODO Review issues in OnPing 
-  DEADLINE: <2022-03-23 Wed>
+  DEADLINE: <2022-06-30 Thu>
+* TODO Review issues in OnPing ✓
+  DEADLINE: <2022-06-30 Thu>
 * TODO Reconcile Bank stuff as well 
-  DEADLINE: <2022-03-30 Wed>
+  DEADLINE: <2022-06-30 Thu>
 * TODO Get appliations for new credit card ✓✓✓✓✓
-  DEADLINE: <2022-04-09 Sat>
+  DEADLINE: <2022-06-30 Thu>
 * TODO Look at Sales Passthrough for numbers to pay Lynn Boyer and those guys ✓
-  DEADLINE: <2023-03-15 Wed>
-* TODO Say something nice to Brooke 
-  DEADLINE: <2022-03-30 Wed>
+  DEADLINE: <2022-07-06 Wed>
 * TODO Go through Emails 
-  DEADLINE: <2022-03-22 Tue>
-
+  DEADLINE: <2022-07-06 Wed>
 * TODO Go through hubspot
-  DEADLINE: <2022-04-05 Tue>
-
+  DEADLINE: <2022-06-30 Thu>
 * TODO EOS status of payment for Magna Power.
-  DEADLINE: <2022-03-30 Wed>
+  DEADLINE: <2022-06-30 Thu>
 * TODO Checking account needs to be emptied in Quickbooks
 * TODO Spec for first class schedules in OnPing ✓✓✓✓✓✓
-  DEADLINE: <2022-06-12 Sun>
+  DEADLINE: <2022-08-23 Tue>
 * TODO Review issues in OnPing 
-  DEADLINE: <2022-06-12 Sun>
-* DONE Reconcile Bank stuff as well 
-  DEADLINE: <2022-03-30 Wed>
-* TODO Get appliations for new credit card 
-  DEADLINE: <2022-06-12 Sun>
-
+  DEADLINE: <2022-07-23 Sat>
 * TODO Look at Sales Passthrough for numbers to pay Lynn Boyer and those guys ✓
   DEADLINE: <2023-03-15 Wed>
 * TODO Say something nice to Brooke 
-  DEADLINE: <2022-06-15 Wed>
-* TODO Go through Emails 
-  DEADLINE: <2022-06-12 Sun>
-
-* DONE Go through hubspot
-  DEADLINE: <2022-06-13 Mon>
+  DEADLINE: <2022-07-06 Wed>
 
 * TODO Quota Path Setup and Review
-  DEADLINE: <2022-06-15 Wed>
-
-* DONE EOS status of payment for Magna Power.
-  DEADLINE: <2022-03-30 Wed>
-* DONE Checking account needs to be emptied in Quickbooks
-  DEADLINE: <2022-03-30 Wed>
-* DONE Plow OK Income account needs to be fixed in Quickbooks OK 
-  DEADLINE: <2022-03-21 Mon>
-* TODO Start spec and cost estimate for pearlsnap kiosk project. 
-  DEADLINE: <2022-04-09 Sat>
-* TODO Review new metrics for tach with binary thing 
-  DEADLINE: <2022-04-29 Fri>
-* TODO Check on Tyson Status
-  DEADLINE: <2022-06-12 Sun>
-* TODO Review new metrics for tach with binary thing 
-  DEADLINE: <2022-06-12 Sun>
-* DONE Check on Tyson Status
-  DEADLINE: <2022-04-04 Mon>
-* DONE Add Scout bill to Seminole
-  DEADLINE: <2022-03-11 Fri>
-
+  DEADLINE: <2022-07-01 Fri>
 
 * TODO LACT Ticketing 
-  DEADLINE: <2022-04-29 Fri>
+  DEADLINE: <2022-07-23 Sat>
   DEADLINE: <2022-06-12 Sun>
-* DONE What is the "withdrawals" account
-  DEADLINE: <2022-03-21 Mon>
 * TODO Insurance on Truck missed in feb
-* DONE Insurance on Truck missed in feb
-  DEADLINE: <2022-03-21 Mon>
-* TODO I need to understand the ATT Bill again
-  DEADLINE: <2022-03-21 Mon>
-
-* DONE Look over Tobi's insurance
-  DEADLINE: <2022-03-16 Wed>
-* DONE Send over Eric (OK fidelity) Balance Sheet
-  DEADLINE: <2022-03-16 Wed>
-
-* DONE Look over Siddarth
-  DEADLINE: <2022-03-16 Wed>
 * TODO Foundation Energy Cell
-  DEADLINE: <2022-03-30 Wed>
-* DONE Camino report 
-  DEADLINE: <2022-03-18 Fri>
-* DONE Add Black label issue
-  DEADLINE: <2022-03-23 Wed>
+  DEADLINE: <2022-06-30 Thu>
 * TODO Review Dex Issue
-  DEADLINE: <2022-03-23 Wed>
+  DEADLINE: <2022-06-30 Thu>
 * TODO Review MQTT issue
-  DEADLINE: <2022-03-23 Wed>
-* DONE Get Sidharth info 
-  DEADLINE: <2022-03-23 Wed>
+  DEADLINE: <2022-07-02 Sat>
 * TODO Make Testing Discussion issue
-  DEADLINE: <2022-03-29 Tue>
+  DEADLINE: <2022-06-30 Thu>
 * TODO Respond to Blake email
-  DEADLINE: <2022-03-29 Tue>
+  DEADLINE: <2022-06-30 Thu>
 * TODO Check on Reconciliation 
-  DEADLINE: <2022-03-29 Tue>
+  DEADLINE: <2022-06-24 Fri>
 * TODO Jesse API stuff
-  DEADLINE: <2022-03-29 Tue>
+  DEADLINE: <2022-06-24 Fri>
 
-* DONE Look over Siddarth
-  DEADLINE: <2022-03-16 Wed>
-* TODO Foundation Energy Cell
-  DEADLINE: <2022-06-12 Sun>
-* DONE Camino report 
-  DEADLINE: <2022-04-21 Thu>
-* DONE Add Black label issue
-  DEADLINE: <2022-03-23 Wed>
-* DONE Review Dex Issue
-  DEADLINE: <2022-03-23 Wed>
 * TODO Review MQTT issue
-  DEADLINE: <2022-06-18 Sat>
-* DONE Get Sidharth info 
-  DEADLINE: <2022-03-23 Wed>
-* DONE Make Testing Discussion issue
-  DEADLINE: <2022-03-29 Tue>
-* DONE Respond to Blake email
-  DEADLINE: <2022-04-12 Tue>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Check on Reconciliation 
-  DEADLINE: <2022-06-15 Wed>
-* DONE Jesse API stuff
-  DEADLINE: <2022-04-06 Wed>
-* DONE EOS Demo 
-  DEADLINE: <2022-04-05 Tue>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Fathom Budget
-  DEADLINE: <2022-06-15 Wed>
-* DONE City of Lawton Review
-  DEADLINE: <2022-04-08 Fri>
-* DONE Get Change of Beneficiary done
-  DEADLINE: <2022-04-08 Fri>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Find the source of Control Parameter Stallouts
-  DEADLINE: <2022-06-18 Sat>
+  DEADLINE: <2022-07-01 Fri>
 https://onping.plowtech.net/v3/data-analysis?pid=448135
 * TODO Get Belyinda the stuff for Insurance and bonding capacity
-  DEADLINE: <2022-06-12 Sun>
-* DONE Fix Shower Head
-  DEADLINE: <2022-04-15 Fri>
+  DEADLINE: <2022-06-24 Fri>
 * TODO Import export for opc/ua
-  DEADLINE: <2022-06-18 Sat>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Performance improvement OPC/UA
-  DEADLINE: <2022-06-18 Sat>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Import Export improvement modbus 
-  DEADLINE: <2022-06-18 Sat>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Look over EOS CAG Build
-  DEADLINE: <2022-06-18 Sat>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Build Igntion Package in OnPing
-  DEADLINE: <2022-06-18 Sat>
+  DEADLINE: <2022-07-01 Fri>
 * TODO Set meeting for owners Q2 end
-DEADLINE: <2022-06-14 Tue>
+DEADLINE: <2022-06-24 Fri>
 * TODO Respond to Carlos Email
-DEADLINE: <2022-06-14 Tue>
+DEADLINE: <2022-06-24 Fri>
 * TODO Respond to Mach Email 
-DEADLINE: <2022-06-14 Tue>
-* DONE Respond to Petro email
-DEADLINE: <2022-06-14 Tue>
+DEADLINE: <2022-06-24 Fri>
+* TODO Get new project in github for EOS
+DEADLINE: <2022-06-29 Wed>
+* TODO Test Prescinto Docker
+DEADLINE: <2022-06-29 Wed>
+* TODO Make 8 Modmon things
+DEADLINE: <2022-06-29 Wed>
+* TODO TFTP Daemon - with Firmware
+DEADLINE: <2022-07-06 Wed>
+
+* TODO Test OPC-UA Driver
+DEADLINE: <2022-06-29 Wed>
+
+* TODO Talk to Patrick
+DEADLINE: <2022-06-29 Wed>
+
+* TODO Clean up Calendly
+DEADLINE: <2022-06-29 Wed>
+
+* TODO Figure out what to do about house in Texas
+DEADLINE: <2022-06-29 Wed>
+
+* TODO Get numbers over to DSI
+DEADLINE: <2022-07-05 Tue>
+
+* TODO Get Job Ad for Purchasing out
+DEADLINE: <2022-07-05 Tue>
+
+* TODO Look over quickbooks /fathom
+  DEADLINE: <2022-06-30 Thu>
+
+* TODO [[https://onping.zendesk.com/agent/tickets/3864][Fix MQTT Tags]]
+DEADLINE: <2022-07-02 Sat>
