Updating new todo

--- a/cycles.org
+++ b/cycles.org
@@ -1,4 +1,11 @@
 * [[/Users/scott/notes/professional-journal/year-2023/year-2023.org][Journal Entries]]
-DEADLINE: <2023-07-18 Tue>
-* [[https://lucid.app/lucidchart/dc919919-c50d-43a6-8e46-13683d912660/edit?viewport_loc=-28%2C65%2C2206%2C1284%2CBHokw2pKlh~V&invitationId=inv_baa3dcfe-03b1-4713-94e0-85290d6473ac][Lucid Chart Cycles]]
 DEADLINE: <2023-07-19 Wed>
+* [[https://lucid.app/lucidchart/dc919919-c50d-43a6-8e46-13683d912660/edit?viewport_loc=-28%2C65%2C2206%2C1284%2CBHokw2pKlh~V&invitationId=inv_baa3dcfe-03b1-4713-94e0-85290d6473ac][Update Sales Cycle Guide]]
+DEADLINE: <2023-07-19 Wed>
+* [[https://lucid.app/lucidchart/dc919919-c50d-43a6-8e46-13683d912660/edit?viewport_loc=-28%2C65%2C2206%2C1284%2CBHokw2pKlh~V&invitationId=inv_baa3dcfe-03b1-4713-94e0-85290d6473ac][Update Thursday]]
+DEADLINE: <2023-07-20 Thu>
+* [[https://lucid.app/lucidchart/dc919919-c50d-43a6-8e46-13683d912660/edit?viewport_loc=-28%2C65%2C2206%2C1284%2CBHokw2pKlh~V&invitationId=inv_baa3dcfe-03b1-4713-94e0-85290d6473ac][Update Work Self]]
+DEADLINE: <2023-07-23 Sun>
+* Ask Brooke about her day, say "I love you"
+DEADLINE: <2023-07-19 Wed>
+
