--- a/scott.org
+++ b/scott.org
@@ -1,247 +1,67 @@
-* TODO Do a general project review and prioritization.
-  DEADLINE: <2022-08-11 Thu>
-** Projects
-*** Team Allocation
-**** Alberto 
-**** Bruno 
-**** Daniel 
-**** James 
-**** Jeremy 
-**** Logan 
-**** Michael 
-**** Mirko 
-**** SamB 
-**** Shulhi 
-**** Shulhi
-**** Siddarth     
-*** Backlog
 
-**** Report fix to be able to run after crash
-**** Lufkin Sam Downhole driver 
-**** Universal writes proper typing
-**** OPC-UA driver Tag Browser 
-**** Sparkplug B Full implementation
-**** Data Only Linegraph Export
-**** Line Graph on Local HMI 
-**** HMI Resync Fix
-**** Water - Elynx Project 
-**** First Class Schedules
-**** [[https://www.openchargealliance.org/protocols/ocpp-201/][OCCP ]]Open charge point protocol     
-**** Koyo Protocol
-**** 8500 protocol                                         
-**** 230 [[https://github.com/plow-technologies/all/issues/230][Schedule Wheel]]
-**** 5810 [copilot-code-dater] Current implementation and future plans
-**** 6416 [proposal] mostly-serverless stakeout with WebRTC
-**** 6512 iwell api creation for onping driver
-**** 6840 Networked, in memory, and binary logging 
-**** 7934 RTU Manager Rewrite
-**** Probabilistic Inferno
+* Learning
 
-*** On Deck 
-**** Extract Logs Change - Waiting on modmon change
-*** In Work
-**** 7584 Pilot Water Site Pro                                      :James:Michael:
-**** 4906 LAS Install Docker :Mirko:
-**** TODO Close this? Modmon change                                 :Michael:
-**** 4281 LJ Deploy Garbage Collection                              :Alberto:
-**** 6244 Inferno-History                                              :SamB:Siddarth:
-**** 7692 Tachdb Downhole Card Support :Daniel:
-**** Logan - 6207, 5730  OnPing Pricing :Logan:
+** TODO Play With [[https://huggingface.co/blog/llama2][Llama 2]]
+SCHEDULED: <2023-07-22 Sat> DEADLINE: <2023-07-23 Sun>
 
-** Enable and Disable polling
-** Sites go inactive insted of disappearing.
-** Event Based Polling
-** Localized Polling (No rtu-manager send)
-* TODO Secretary of State
-  DEADLINE: <2022-12-28 Wed>
-* TODO Fix Emissary accounting exports
-  DEADLINE: <2022-11-18 Fri>
-* TODO [[https://mail.google.com/mail/u/0/#inbox/FMfcgxwKjBRFHBjHQPvtWWmRdsRcrJnC][Code Dater Comms Protocol]] ✓
-  DEADLINE: <2023-03-04 Sat>
+** TODO What does spiking Neural Networks mean?
+DEADLINE: <2023-07-18 Tue>
 
-* TODO [[https://emissary.plowtech.net/login#/ticket_doc_view/7802][Matt Brodine Missouri stuff]]
+** TODO [[https://arxiv.org/abs/2305.07617][Paper on Discrete reasoning]]
+DEADLINE: <2023-07-18 Tue>
+We empirically show it is able to efficiently learn how to solve NP-hard
+reasoning problems from natural inputs as the symbolic, visual or
+many-solutions Sudoku problems as well as the energy optimization formulation of the protein design problem
 
-* TODO [[https://github.com/plow-technologies/all/issues/5627][Too many deploys rolls 9999 over to 10000]]
-* TODO [[https://mail.google.com/mail/u/0/#inbox/QgrcJHrnrmgGXTfPKxdZhmbmKfdKZCWXlPb][Matt Brodine, Driftwood Deploy]]
-* TODO [[~/notes/books/advanced-probability/notes.org][Work on Probability Notes]] ✓
-  DEADLINE: <2022-08-10 Wed>
-* TODO [[file:~/notes/professional-journal/year-2022/year-2022.org][Journal Entry]] 
-  DEADLINE: <2022-08-05 Fri>
-* TODO [[https://mail.google.com/mail/u/0/#inbox/QgrcJHrnrmgGXTfPKxdZhmbmKfdKZCWXlPb][Matt Brodine, Driftwood Deploy]]
-* TODO Look over OnPing pricing one more time.
-  DEADLINE: ho<2021-08-02 Mon>
-* TODO Get Fred his tag counts
-* TODO Work on blog post about sensor quality scores ✓✓✓✓✓✓
-  DEADLINE: <2022-09-04 Sun>
-* TODO [[https://headwayapp.co/][Investigate Headway more carefully]]
-  DEADLINE: <2022-10-06 Thu>
+** TODO [[https://arxiv.org/abs/2307.07700][Answer Set Programming]]
+DEADLINE: <2023-07-18 Tue>
+NeurASP provides a simple and effective way to integrate sub-symbolic and symbolic computation. 
+** TODO  [[https://arxiv.org/abs/2303.05118][Slow Learning Paper]]
+DEADLINE: <2023-07-18 Tue>
+The goal of continual learning is to improve the performance of recognition models in
+learning sequentially arrived data. Although most existing works are established on
+the premise of learning from scratch, growing efforts have been devoted to
+incorporating the benefits of pre-training
 
-Headway is the software Shulhi recommended for 
-updating customers about changes in OnPing.
+* Financials
+** TODO Get Tax Documents to Paxus
+SCHEDULED: <2023-07-19 Wed> DEADLINE: <2023-07-21 Fri>
+* Ops
 
-* TODO [[https://mail.google.com/mail/u/1/#search/Garrett.king%40plowtech.net/FMfcgzGlkjWzCsBmQZGNPGnmtCxcSMhW][Blackfire stakeout]]
-* TODO Write a spec for high speed driver ✓✓✓✓✓✓✓✓✓
-  DEADLINE: <2022-09-01 Thu>
-* TODO [[https://mail.google.com/mail/u/1/#search/Garrett.king%40plowtech.net/FMfcgzGlkjWzCsBmQZGNPGnmtCxcSMhW][Blackfire stakeout]]
-* TODO Take a look at save and overwrite prompt on VP/CP (Jesse is worried that he will overwrite an existing script)
-* TODO HMI improvements on Indicator and HMI object sizing (The indicator object doesn't have a height configuration, only width)
-* TODO Engineering units on the side of Indicators (Jesse would like an engineering unit row on the HMI object configuration window on objects that it applies to)
-* TODO Sorting functions for parameter browsing (Jesse would like sorting for parameters on parameter browsing windows)
-* TODO Spec for first class schedules in OnPing ✓✓✓✓✓✓
-  DEADLINE: <2023-08-04 Fri>
-* TODO Review issues in OnPing 
-  DEADLINE: <2022-08-11 Thu>
-* TODO Reconcile Bank stuff as well 
-  DEADLINE: <2023-07-06 Thu>
+** TODO EOS - Veijas Get Quote turned around
+SCHEDULED: <2023-07-18 Tue> DEADLINE: <2023-07-18 Tue>
 
-* TODO Go through Emails 
-  DEADLINE: <2022-08-05 Fri>
-* TODO Go through hubspot 
-  DEADLINE: <2022-07-22 Fri>
-* DONE EOS status of payment for Magna Power.
-  DEADLINE: <2022-06-30 Thu>
-* TODO Checking account needs to be emptied in Quickbooks
-* TODO Spec for first class schedules in OnPing ✓✓✓✓✓✓
-  DEADLINE: <2022-08-23 Tue>
-* TODO Review issues in OnPing 
-  DEADLINE: <2022-08-05 Fri>
+** TODO Shop - get Justin into Hubspot
+DEADLINE: <2023-07-18 Tue>
 
-* TODO Say something nice to Brooke  
-  DEADLINE: <2022-08-05 Fri>
+** TODO EOS - Follow up on Cors 2 file 
+DEADLINE: <2023-07-18 Tue>
 
-* TODO Quota Path Setup and Review ✓✓
-  DEADLINE: <2022-08-16 Tue>
+* Sales
+
+** TODO Review fallout for Toyota call
+DEADLINE: <2023-07-18 Tue>
+
+* Plow Content
+** TODO Article on FAT Testing
+DEADLINE: <2023-08-01 Tue>
+** TODO Article on starting your own automation business
+DEADLINE: <2023-07-25 Tue>
+** TODO Review of a PLC next
+DEADLINE: <2023-07-25 Tue>
+
+* OnPing Content
+
+* TODO Introducing Lumberjack Enterprise
+DEADLINE: <2023-10-18 Wed>
+
+* Personal
+** TODO Get Teeth Appointment Scheduled
+SCHEDULED: <2023-07-19 Wed> DEADLINE: <2023-07-20 Thu>
+* HR
+** TODO Sumarize Meeting with Justin 
+DEADLINE: <2023-07-18 Tue>
+** TODO Summarize Q2 Owners Meeting 
+DEADLINE: <2023-07-18 Tue>
 
 
-
-* DONE LACT Ticketing 
-  DEADLINE: <2022-07-23 Sat>
-  DEADLINE: <2022-06-12 Sun>
-* TODO Insurance on Truck missed in feb
-* DONE Foundation Energy Cell
-  DEADLINE: <2022-06-30 Thu>
-* DONE Review Dex Issue
-  DEADLINE: <2022-06-30 Thu>
-
-* TODO Check on Reconciliation 
-  DEADLINE: <2022-08-11 Thu>
-* TODO Fathom Budget
-  DEADLINE: <2022-08-11 Thu>
-* TODO Find the source of Control Parameter Stallouts
-  DEADLINE: <2022-09-01 Thu>
-https://onping.plowtech.net/v3/data-analysis?pid=448135
-* DONE Get Belyinda the stuff for Insurance and bonding capacity
-  DEADLINE: <2022-08-08 Mon>
-* DONE Import export for opc/ua
-  DEADLINE: <2022-07-01 Fri>
-* DONE Performance improvement OPC/UA
-  DEADLINE: <2022-07-01 Fri>
-* TODO Import Export improvement modbus 
-  DEADLINE: <2022-08-06 Sat>
-* DONE Look over EOS CAG Build
-  DEADLINE: <2022-07-01 Fri>
-* TODO Build Igntion Package in OnPing
-  DEADLINE: <2022-08-05 Fri>
-* DONE Set meeting for owners Q2 end
-DEADLINE: <2022-07-06 Wed>
-* DONE TFTP Daemon - with Firmware
-DEADLINE: <2022-07-06 Wed>
-
-* DONE Figure out what to do about house in Texas
-DEADLINE: <2022-08-02 Tue>
-
-* DONE Get numbers over to DSI
-DEADLINE: <2022-07-05 Tue>
-
-* DONE Get Job Ad for Purchasing out
-DEADLINE: <2022-07-05 Tue>
-
-* TODO Look over quickbooks /fathom
-  DEADLINE: <2022-08-11 Thu>
-
-* TODO [[https://onping.zendesk.com/agent/tickets/3864][Fix MQTT Tags]]
-DEADLINE: <2022-08-11 Thu>
-* DONE Respond to Carlos Email
-DEADLINE: <2022-06-24 Fri>
-* DONE Respond to Mach Email 
-DEADLINE: <2022-06-24 Fri>
-* DONE Get new project in github for EOS
-DEADLINE: <2022-06-29 Wed>
-* DONE Test Prescinto Docker
-DEADLINE: <2022-06-29 Wed>
-* DONE Make 8 Modmon things
-DEADLINE: <2022-06-29 Wed>
-* DONE Test OPC-UA Driver
-DEADLINE: <2022-06-29 Wed>
-
-* DONE Talk to Patrick
-DEADLINE: <2022-06-29 Wed>
-
-* DONE Clean up Calendly
-DEADLINE: <2022-06-29 Wed>
-
-* TODO Fix wifi on laptop for LJ ✓
-DEADLINE: <2022-08-11 Thu>
-
-* TODO [[https://mail.google.com/mail/u/0/#inbox/FMfcgzGpGwhzgSgcCcCjWNbZPNnxCsnD][Toku Sensor]]
-DEADLINE: <2022-08-11 Thu>
-
-* TODO Look at report Johnnie Makes for CFX
-DEADLINE: <2022-08-05 Fri>
-
-* DONE Email Justin
-DEADLINE: <2022-07-12 Tue>
-
-* DONE Email Pau
-DEADLINE: <2022-07-14 Thu>
-
-* DONE Write rejection emails
-DEADLINE: <2022-07-12 Tue>
-
-* DONE Get with Chad and go through OK Fidelity
-DEADLINE: <2022-07-22 Fri>
-
-* TODO Check on Quickbooks Links in OK Fidelity before they go crazy 
-DEADLINE: <2022-08-09 Tue>
-
-* TODO Business goals to Mirko ✓
-DEADLINE: <2022-09-01 Thu>
-
-
-* TODO Midfirst Truck Loan -> OK Fidelity Truck Loan
-DEADLINE: <2022-08-07 Sun>
-
-* TODO Check June Insurance 
-DEADLINE: <2022-08-12 Fri>
-Only Juniors insurance showing up.
-* DONE Credit Card Credentials 
-DEADLINE: <2022-08-02 Tue>
-
-* DONE Bank Credentials 
-DEADLINE: <2022-08-02 Tue>
-
-* TODO Get Owner Credentials Set up
-DEADLINE: <2022-08-11 Thu>
-
-* DONE Get Pizza for OKC FP
-DEADLINE: <2022-08-02 Tue>
-
-* TODO Get HMI Local Video Plan
-DEADLINE: <2022-08-04 Thu>
-
-* TODO Get Mass Writes Video Plan
-DEADLINE: <2022-08-04 Thu>
-
-* TODO Ask Brent where the plowtech bot lives
-DEADLINE: <2022-08-05 Fri>
-
-* TODO Growth Meeting Topics
-DEADLINE: <2022-08-10 Wed>
-+ Metrics
-+ Targets 
-+ Materials
-+ Features
-
-* TODO need to add a "Prepayment OnPing" account for prepayment revenue
-DEADLINE: <2022-08-13 Sat>
-[[https://www.investopedia.com/terms/p/prepayment.asp][Info on prepayment]]
